fixed .sm-content img width being too big in small screens

--- a/css/style.css
+++ b/css/style.css
@@ -952,6 +952,10 @@ body > .container {
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 87%,rgb(234, 234, 234) 100%);
 } 
 
+.card .body .sm-content img {
+	width: 100%
+}
+
 .card ul {
 	margin: 0;
 	padding-top: 0.5em;
